--- a/styles/style.css
+++ b/styles/style.css
@@ -245,6 +245,8 @@
     color: #727272;
     margin-top: 24px;
 }
+
+/* Sponsors Design  */
 .sponsors{
     display: flex;
     flex-direction: column;
