--- a/styles/style.css
+++ b/styles/style.css
@@ -21,10 +21,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 }
 
 .nav-links ul {
     display: flex;
+
+
 }
 
 .nav-links ul li {
@@ -78,6 +81,7 @@
 .header-img img {
     width: 900px;
     height: 400px;
+
 }
 
 /* Features Design  */
@@ -209,51 +213,58 @@
     font-weight: 500;
     font-size: 25px;
 }
+
 /* Blogs */
-.blogs{
+.blogs {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-left: 228px;
     margin-right: 228px;
     margin-top: 50px;
-    
+
 }
-.blog img{
+
+.blog img {
     height: 130px;
     width: 155px;
     border-radius: 5px;
 }
-.blog{
+
+.blog {
     display: flex;
     gap: 10px;
 }
-.blogs-list{
+
+.blogs-list {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     row-gap: 24px;
     column-gap: 24px;
 
 }
-.blog-texts h3{
+
+.blog-texts h3 {
     font-weight: 700;
     font-size: 45px;
     margin-bottom: 24px;
     margin-bottom: 50px;
 }
-.blogs-title{
+
+.blogs-title {
     font-weight: 600;
     font-size: 20px;
-   
+
 }
-.blogs-description{
+
+.blogs-description {
     color: #727272;
     font-weight: 400;
     font-size: 16px;
     margin-top: 10px;
 }
 
-.blog-btn{
+.blog-btn {
     color: #FFF4E7;
     background-color: #FF900E;
     border: 0;
@@ -262,18 +273,21 @@
     border-radius: 8px;
     margin-top: 10px;
 }
+
+.blogs {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
 /* Fact section design  */
 .fact {
     display: flex;
     justify-content: center;
     gap: 100px;
 }
-.blogs{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
+
 .fact-container {
     border: 1px solid #FF900E;
     border-radius: 8px;
@@ -284,13 +298,15 @@
     gap: 10px;
     width: 150px;
     height: 150px;
-    transition:height 0.5s ease-in ,width 0.5s ease-in;
+    transition: height 0.5s ease-in, width 0.5s ease-in;
 }
-.fact-container:hover{
+
+.fact-container:hover {
     background-color: rgb(179, 167, 167);
     height: 155px;
     width: 155px;
 }
+
 .facts-texts {
     padding-left: 200px;
     margin-top: 100px;
@@ -310,27 +326,32 @@
 }
 
 /* Sponsors Design  */
-.sponsors{
+.sponsors {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
 }
-.sponsors-texts{
+
+.sponsors-texts {
     text-align: center;
     margin-top: 100px;
 }
-.sponsors-title{
+
+.sponsors-title {
     font-weight: 700;
-font-size: 45px;
+    font-size: 45px;
 }
-.sponsors-sub-title{
+
+.sponsors-sub-title {
     font-weight: 400;
     font-size: 16px;
     color: #727272;
     margin-top: 24px;
 }
-.sponsors-icons{
+
+.sponsors-icons {
     display: flex;
     gap: 50px;
     margin-top: 40px;
@@ -338,7 +359,7 @@ font-size: 45px;
 
 /* footer design  */
 
-.footer-container{
+.footer-container {
     background-color: #FFF4E7;
     border-radius: 8px;
     display: flex;
@@ -350,9 +371,97 @@ font-size: 45px;
 
 }
 
-.footer-text{
+.footer-text {
     text-align: center;
     padding-top: 39px;
     padding-bottom: 39px;
+
+}
+
+@media only screen and (max-width:688px) {
+    /* Header Design */
+    .header {
+        padding-left: 80px;
+        padding-right: 320px;
+    }
+
+    .header-texts {
+        text-align: center;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .nav {
+        flex-direction: column;
+
+        align-items: flex-start;
+    }
+
+    .nav-links ul {
+        flex-direction: column;
+
+        margin-top: 20px;
+    }
+
+    .header img {
+        width: 200px;
+        height: 100px;
+    }
+
+    .features {
+        flex-direction: column;
+    }
+
+    .features-images {
+        grid-template-columns: repeat(1, 1fr);
+    }
+/* Sponsors Design  */
+    .sponsors-icons {
+        flex-direction: column;
+
+    }
+
+    .sponsors-icons img {
+        width: 100px;
+
+    }
+/* Blog Design  */
+    .blog {
+        flex-direction: column;
+    }
+
+    .blogs-list {
+        grid-template-columns: repeat(1, 1fr);
+    }
+/* Skill Design  */
+    .skill {
+        flex-direction: column;
+
+    }
+
+    .skill img {
+        width: 80%;
+    }
+
+    .skills-btn {
+        top: 0;
+        right: 25px;
+        height: auto;
+    }
+/* Fact Design */
+    .fact {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+   
+    .facts-texts {
+        padding-left: 10px;
+    }
+/* Footer Responsive  */
+    .footer-container {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
 
 }
